# ai-agent-memory

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: inject-memory-context.py
config/: graph-templates.yaml  mcp-server.json
logs/: README.md
scripts/: install.ps1  session-wrapper.ps1  test-integration.ps1  visualize-graph.ps1
src/: __init__.py  chromadb_manager.py  config.py  documentation_manager.py  graph_manager.py  server.py  task_manager.py  utils.py
templates/: AGENT.md  AGENTS.md  ARCHITECTURE.md  agent-hooks-setup.md
